feat : 애노테이션 프로세서 실습

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
       <artifactId>auto-service</artifactId>
       <version>1.0-rc7</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.squareup/javapoet -->
+    <dependency>
+      <groupId>com.squareup</groupId>
+      <artifactId>javapoet</artifactId>
+      <version>1.13.0</version>
+    </dependency>
+
   </dependencies>
 
 </project>
